--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,7 +7,20 @@
         xmlns:WpfControls="clr-namespace:Nevron.Nov.WpfControls;assembly=Nevron.Nov.WpfControls" x:Class="WpfApp1.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="855" Loaded="Window_Loaded" Closed="Window_Closed">
-    <DataGrid x:Name="grid" Margin="317,10,10,10"/>
+    <Grid Margin="428,10,10,10">
+        <DataGrid x:Name="grid" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <Label Content="Город" HorizontalAlignment="Left" Margin="-394,14,0,0" VerticalAlignment="Top"/>
+        <Label Content="Почтовый адрес" HorizontalAlignment="Left" Margin="-394,45,0,0" VerticalAlignment="Top"/>
+        <Label Content="Юридический адрес" HorizontalAlignment="Left" Margin="-394,71,0,0" VerticalAlignment="Top"/>
+
+        <GroupBox HorizontalAlignment="Left" Height="156" Header="ФИЛЬТРАЦИЯ ДАННЫХ" Margin="-408,-8,0,0" VerticalAlignment="Top" Width="372"/>
+
+        <TextBox Margin="-346,16,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Name="FirmName" TextWrapping="Wrap" Text="" Height="24" KeyUp="CityName_KeyUp" Width="303"/>
+        <TextBox Margin="-288,47,0,0" Name="PostAddress" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="" Height="24" KeyUp="CityName_KeyUp" Width="245"/>
+        <TextBox Margin="-271,76,0,0" Name="JurAddress" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" KeyUp="CityName_KeyUp" Width="228" Height="24" VerticalAlignment="Top"/>
+        <CheckBox Name="allData" Content="Все данные" HorizontalAlignment="Left" Margin="-394,102,0,0" VerticalAlignment="Top" Checked="allData_Checked"/>
+
+    </Grid>
 
 
 
