--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -14,13 +14,19 @@
         <Label Content="Почтовый адрес" HorizontalAlignment="Left" Margin="-485,45,0,0" VerticalAlignment="Top" Width="125"/>
         <Label Content="Юридический адрес" HorizontalAlignment="Left" Margin="-485,71,0,0" VerticalAlignment="Top" Width="152"/>
 
-        <GroupBox HorizontalAlignment="Left" Height="156" Header="ФИЛЬТРАЦИЯ ДАННЫХ" Margin="-500,-8,0,0" VerticalAlignment="Top" Width="490"/>
+        <GroupBox HorizontalAlignment="Left" Height="174" Header="ФИЛЬТРАЦИЯ ДАННЫХ" Margin="-500,-8,0,0" VerticalAlignment="Top" Width="490"/>
 
         <TextBox Margin="-378,16,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Name="FirmName" TextWrapping="Wrap" Text="" Height="24" KeyUp="CityName_KeyUp" Width="356"/>
         <TextBox Margin="-378,47,0,0" Name="PostAddress" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="" Height="24" KeyUp="CityName_KeyUp" Width="356"/>
         <TextBox Margin="-358,76,0,0" Name="JurAddress" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" KeyUp="CityName_KeyUp" Width="336" Height="24" VerticalAlignment="Top"/>
         <CheckBox Name="allData" Content="Все данные" HorizontalAlignment="Left" Margin="-485,102,0,0" VerticalAlignment="Top" Checked="allData_Checked" Unchecked="allData_Unchecked" Width="103"/>
-
+        <Button Name="button" Content="Выгрузить документы" Margin="-149,123,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"  Background="#FFF1750C" Foreground="White" Click="button_Click" Height="23" Width="127">
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="10"/>
+                </Style>
+            </Button.Resources>
+        </Button>
     </Grid>
 
 
