--- a/WpfApp1/Start.xaml
+++ b/WpfApp1/Start.xaml
@@ -5,11 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Start" Height="450" Width="800">
-    <Grid Background="Black">
-        <ProgressBar x:Name="prog" HorizontalAlignment="Center" Height="12" Margin="0,390,0,0" VerticalAlignment="Top" Width="780"/>
+        Title="Start" Height="450" Width="800" WindowStyle="None">
+    <Grid >
+
+        <Image HorizontalAlignment="Center" Height="450" VerticalAlignment="Center" Width="800" Source="/start.png" Stretch="Fill"/>
+        <ProgressBar x:Name="prog" Margin="0,0,10,17" HorizontalAlignment="Right" Width="768" Height="5" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5">
+            <ProgressBar.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </ProgressBar.RenderTransform>
+        </ProgressBar>
         <Label Content="Центр информации фирм" HorizontalAlignment="Center" Margin="0,143,0,0" VerticalAlignment="Top" Foreground="White" FontSize="48"/>
-        <Label Name="load" Content="загрузка" HorizontalAlignment="Center" Margin="0,348,0,0" VerticalAlignment="Top" Foreground="White" FontSize="20"/>
 
     </Grid>
 </Window>
